--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "node server.js",
+    "dev": "concurrently --kill-others \"npm run start\" \"npm run server\""
   },
   "private": true,
   "dependencies": {
@@ -21,8 +23,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/jquery": "^3.3.1",
+    "angular2-image-upload": "^1.0.0-rc.0",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "crypto": "^1.0.1",
+    "jquery": "^3.3.1",
+    "mime-types": "^2.1.18",
+    "multer": "^1.3.0",
     "rxjs": "^5.5.6",
+    "save": "^2.3.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -33,8 +43,10 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "concurrently": "^3.5.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "json-server": "^0.12.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
